<resources>
    <string name="app_name">AndroidCrawler</string>
    <string name="navigation_drawer_open">打开菜单</string>
    <string name="navigation_drawer_close">关闭菜单</string>
    <string name="nav_header_title">AndroidCrawler</string>
    <string name="nav_header_subtitle">北极弧光</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="nav_QuickCrawler">快速爬虫</string>
    <string name="nav_SeniorCrawler">高级爬虫</string>
    <string name="nav_Tools">工具箱</string>
    <string name="nav_Help">帮助</string>
    <string name="nav_About">关于</string>
    <string name="nav_Setting">设置</string>
    <string name="nav_Exit">退出</string>
    <string name="title_activity_senior_crawl">高级爬虫</string>
    <string name="title_activity_setting">设置</string>
    <string name="title_activity_tools">工具</string>

    <string name="content_main_TextViewtoubu">爬取采用的标识</string>
    <string name="content_main_TextViewFirst">爬取的网站第一页</string>
    <string name="content_main_TextView1QianBiaoShi">爬取的网站页码前标识</string>
    <string name="content_main_Di">第</string>
    <string name="content_main_yedaodi">页到第</string>
    <string name="content_main_houbiaoshi">爬取的网站页码后标识:</string>
    <string name="content_main_zhinengpaqu">智能爬取</string>
    <string name="content_main_jiandanpaqu">简单爬取</string>
    <string name="content_main_xuanzeqipaqu">选择器爬取</string>
    <string name="content_main_wailianbiaoshi">外链标识</string>
    <string name="zero">0</string>
    <string name="id">id</string>
    <string name="content_main_class">class</string>
    <string name="content_main_shuimianshijian">爬取的睡眠时间1(默认:0ms):</string>
    <string name="content_main_shuimianshijian1">爬取的睡眠时间1</string>
    <string name="content_main_paquguize">正则表达式爬取规则</string>
    <string name="content_main_paquguizemh">正则表达式爬取规则:</string>
    <string name="content_main_tichuguize">正则表达式剔除规则(为空则不剔除):</string>
    <string name="content_main_tichuguizemh">正则表达式剔除规则</string>
    <string name="content_main_neirongbiaoshi">内容标识:</string>
    <string name="cleanSetting">清空设置</string>
    <string name="FixSetting">修复数据</string>
    <string name="BeginCrawler">开始爬取</string>
    <string name="content_main_zhuijiahouzhui">新文件追加后缀,默认为.txt</string>
    <string name="txt">.txt</string>
    <string name="content_main_zhuijiashuoming">新文件为原文件追加自定义文本，默认追加.txt</string>
    <string name="zhuijia">追加</string>
    <string name="fugai">覆盖</string>
    <string name="xinwenjian">新文件</string>
    <string name="SavePathAndName">保存完整路径+文件名:</string>
    <string name="SleepTime2">爬取的睡眠时间2</string>
    <string name="Sleep2Speak">爬取的睡眠时间2(默认:0ms):</string>
    <string name="ye">页</string>
    <string name="content_senior_shezhiwygz">设置网页规则</string>
    <string name="content_senior_shezhipqgz">设置爬取规则</string>
    <string name="content_senior_shezhibcgz">设置保存规则</string>
    <string name="content_senior_kaishipaqu">开始爬取</string>
    <string name="content_tools_piliangcmm">批量重命名</string>
    <string name="content_tools_piliangzhbm">批量转换编码</string>
    <string name="content_tools_piliangggh">批量规格化</string>
    <string name="content_tools_wenbenchaifen">文本拆分</string>
    <string name="content_tools_wenbenzhenghe">文本整合</string>
    <string name="content_tools_neirongquchong">内容去重</string>
    <string name="scgz">删除规则</string>
    <string name="zjgz">增加规则</string>
    <string name="pointtxt">.txt</string>
    <string name="newfiletxt">新文件追加后缀,默认为.txt</string>
    <string name="thbf">替换部分</string>
    <string name="tihuanhou">替换后:</string>
    <string name="xuanzebufen">选择部分</string>
    <string name="tihuanqian">替换前:</string>
    <string name="tihuanguize">正则表达式替换规则:</string>
    <string name="wenjianjlj">文件夹路径</string>
    <string name="tihuanbufen">替换部分</string>
    <string name="hebgz">正则表达式合并规则:</string>
    <string name="hbgz">正则表达式合并规则</string>
    <string name="querenzh">确认整合</string>
    <string name="zhinengzh">智能整合</string>
    <string name="cbmgz">重编码规则</string>
    <string name="newfile">新文件</string>
    <string name="qrcbm">确认重编码</string>
    <string name="querentihuan">确认替换</string>
    <string name="huanyuan">还原</string>
    <string name="cfgz">正则表达式拆分规则:</string>
    <string name="zncf">智能拆分</string>
    <string name="querencaifen">确认拆分</string>
    <string name="quxiao">取消</string>
    <string name="baocundao">保存到</string>
    <string name="bcdjl1">保存到记录1</string>
    <string name="bcdjl2">保存到记录2</string>
    <string name="bcdjl3">保存到记录3</string>
    <string name="bcdjl4">保存到记录4</string>
    <string name="bcdjl5">保存到记录5</string>
    <string name="zzairu">载入</string>
    <string name="cjl1zr">从记录1载入</string>
    <string name="cjl2zr">从记录2载入</string>
    <string name="cjl3zr">从记录3载入</string>
    <string name="cjl4zr">从记录4载入</string>
    <string name="cjl5zr">从记录5载入</string>
    <string name="baifen">备份</string>
    <string name="huifu">恢复</string>
    <string name="about">关于\n</string>
    <string name="kfzbjhg"><![CDATA[>开发者:北极弧光\n]]></string>
    <string name="vertion"><![CDATA[>版本:1.0\n]]></string>
    <string name="poem">将进酒，杯莫停\n</string>
    <string name="PoemAuthor">－李白《将进酒》</string>
    <string name="setting">设置</string>
    <string name="znggh">智能规格化</string>
    <string name="qps">去除快速爬虫爬取的篇数</string>
    <string name="confirm">确认</string>
    <string name="cancle">取消</string>
    <string name="clean">清空</string>
    <string name="CrawOnePage">只爬取一页</string>
    <string name="WriteCrawlerNum">写入文件时追加篇数</string>
    <string name="AutoSet">智能设置</string>
    <string name="class_">class</string>
    <string name="StopCrawler">停止爬取</string>

</resources>
