<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Tools_QuantityNormalizeActivity">
        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="15sp"
            >
            <EditText
                android:id="@+id/Tools_QuantityRePlacePath"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/wenjianjlj"
                android:autofillHints="@string/wenjianjlj"
                tools:targetApi="o"
                android:inputType="text" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tihuanguize"
                    android:layout_gravity="start"
                    android:textColor="#000000"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tihuanqian"
                    android:layout_gravity="start"
                    android:textColor="#000000"/>
                <EditText
                    android:id="@+id/Tools_QuantityReplaceSelect"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/xuanzebufen"
                    android:autofillHints="@string/xuanzebufen"
                    tools:targetApi="o"
                    android:inputType="text" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tihuanhou"
                    android:layout_gravity="start"
                    android:textColor="#000000"/>
                <EditText
                    android:id="@+id/Tools_QuantityReplaceReplace"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/thbf"
                    android:autofillHints="@string/thbf"
                    tools:targetApi="o"
                    android:inputType="text" />

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:checked="true"
                    android:text="@string/zncf"/>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <RadioGroup
                        android:id="@+id/NormalizeSaveRuleGroup"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        tools:ignore="UselessParent">
                        <RadioButton
                            android:id="@+id/NormalizeSaveMethodCover"
                            android:checked="true"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/fugai"/>
                        <RadioButton
                            android:id="@+id/NormalizeSaveMethodNewFile"
                            android:checked="false"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/newfile"/>
                    </RadioGroup>
                </LinearLayout>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_marginTop="5dp"
                    android:text="@string/newfiletxt"
                    android:textColor="#000000" />

                <EditText
                    android:id="@+id/ReplaceRenameAdd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/newfiletxt"
                    android:singleLine="true"
                    android:text="@string/pointtxt"
                    android:autofillHints="@string/pointtxt"
                    tools:targetApi="o"
                    android:inputType="text" />

            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <Button
                android:id="@+id/AddReplaceRule"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/shape"
                android:layout_marginBottom="5dp"
                android:text="@string/zjgz"
                    tools:ignore="ButtonStyle" />
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/shape"
                    android:layout_marginBottom="5dp"
                    android:layout_marginStart="5dp"
                    android:text="@string/scgz"
                    tools:ignore="ButtonStyle" /></LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/ReplaceStart"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/shape"
                    android:text="@string/querentihuan"
                    tools:ignore="ButtonStyle" />
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/shape"
                    android:layout_marginStart="5dp"
                    android:text="@string/huanyuan"
                    tools:ignore="ButtonStyle" />
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/shape"
                    android:layout_marginStart="5dp"
                    android:text="@string/quxiao"
                    tools:ignore="ButtonStyle" />
            </LinearLayout>
        </LinearLayout>
</ScrollView>