<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".SeniorCrawler.SeniorCrawSetSaveRuleActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:orientation="vertical">
    <LinearLayout
        android:id="@+id/SeniorCrawlerNewFileAdd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:text="@string/SavePathAndName"
            android:textColor="#000000"
            android:layout_marginTop="5dp"/>
        <EditText
            android:id="@+id/SeniorCrawlerSaveName"
            android:layout_width="match_parent"
            android:hint="@string/SavePathAndName"
            android:text=""
            android:inputType="text"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:autofillHints="@string/SavePathAndName"
            tools:targetApi="o" />
        <RadioGroup
            android:id="@+id/SeniorCrawlerSaveRule"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <RadioButton
                android:id="@+id/SeniorCrawlerSaveMethodAddTo"
                android:checked="false"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:tag="追加"
                android:text="@string/zhuijia"/>
            <RadioButton
                android:id="@+id/SeniorCrawlerSaveMethodCover"
                android:checked="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:tag="覆盖"
                android:text="@string/fugai"/>
            <RadioButton
                android:id="@+id/SeniorCrawlerSaveMethodNewFile"
                android:checked="false"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:tag="新文件"
                android:text="@string/xinwenjian"/>
        </RadioGroup>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:text="@string/content_main_zhuijiashuoming"
            android:layout_marginTop="5dp"
            android:textColor="#000000"
            />
        <EditText
            android:id="@+id/SeniorCrawlerSaveNameAdd"
            android:layout_width="match_parent"
            android:text="@string/txt"
            android:hint="@string/content_main_zhuijiahouzhui"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:inputType="text"
            android:autofillHints="@string/content_main_zhuijiahouzhui"
            tools:targetApi="o" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal"
        android:scrollbars="horizontal"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="40dp"
        android:textColor="#000000">
        <Button
            android:id="@+id/SeniorCrawlerSaveConfirm"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:background="@drawable/shape"
            style="@style/Widget.AppCompat.ButtonBar"
            android:text="@string/confirm" />
        <Button
            android:id="@+id/SeniorCrawlerSaveCancle"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="1dp"
            android:background="@drawable/shape"
            style="@style/Widget.AppCompat.ButtonBar"
            android:text="@string/cancle" />
        <Button
            android:id="@+id/SeniorCrawlerSaveClean"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="1dp"
            android:width="0dp"
            android:background="@drawable/shape"
            style="@style/Widget.AppCompat.ButtonBar"
            android:text="@string/clean" />
    </LinearLayout>
    </LinearLayout>
</ScrollView>