<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Tools_TextMergeActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="vertical">
        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="15sp"
            >
            <EditText
                android:id="@+id/Tools_TextMergePath"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:hint="@string/wenjianjlj"
                android:autofillHints="@string/wenjianjlj"
                tools:targetApi="o" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/hebgz"
                    android:layout_gravity="start"
                    android:textColor="#000000"/>
                <EditText
                    android:id="@+id/Tools_TextMergeRule"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hbgz"
                    android:autofillHints="@string/hbgz"
                    android:inputType="text"
                    tools:targetApi="o" />
            </LinearLayout>
            <CheckBox
                android:id="@+id/AutoTextMerge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:checked="true"
                android:text="@string/zhinengzh"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/TextMergeStart"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/shape"
                    android:text="@string/querenzh"
                    tools:ignore="ButtonStyle" />
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/shape"
                    android:layout_marginStart="5dp"
                    android:text="@string/quxiao"
                    tools:ignore="ButtonStyle" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>